# Linux-Fake-Background-Webcam

./: .deepsource.toml  .gitignore  DOCKER.md  Dockerfile  README.md  TENSORFLOW.md  akvcam-install.sh  akvcam.py  benchmark.sh  build.sh  config-example.ini  create-containers.sh  docker-compose-nvidia.yml  docker-compose.yml  docker_defaults.env  fake.py  init.sh  install.sh  pyproject.toml  remove-all.sh  remove-containers.sh  remove-images.sh  requirements.txt  run-all.sh  run.sh  stop-containers.sh  v4l2loopback-install.sh
akvcam/: config.ini
bodypix/: Dockerfile  Dockerfile-nvidia  app.js  enable_avx_fma_acceleration.sh  package.json
fakecam/: Dockerfile  akvcam.py  classifier.py  deeplabv3.py  fake.py  requirements.txt
lfbw/: lfbw.py
systemd-user/: fakecam.service  lfbw.service  lfbw_start_wrapper.sh
