[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "linux-fake-background-webcam"
version = "0.1.0"
description = "Faking your webcam background under GNU/Linux."
authors = ["Fufu Fang <fangfufu2003@gmail.com>"]
packages = [
    { include = "lfbw" }
]

[tool.poetry.scripts]
lfbw = 'lfbw.lfbw:main'

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=1.26.4"
opencv-python = ">=4.11.0.86"
pyfakewebcam = ">=0.1.0"
mediapipe = ">=0.10.21"
inotify_simple = ">=1.3.5"
cmapy = ">=0.6.6"
configargparse = ">=1.7.1"
protobuf = ">=4.25.8"

